@@ -258,5 +258,7 @@ oidc-agent (3.0.2) UNRELEASED; urgency=medium
 
   [ Gabriel Zachmann ]
   * Fixed a segfault if the pubclients.conf file does not exist
+  * Fixed segfault if the issuer.config in the oidc-agent directory doesn't
+    exist and an AT is requested by issuer.
 
  -- Marcus Hardt <hardt@kit.edu>  Wed, 10 Apr 2019 13:16:09 +0100
